# ml

./: .gitignore  README.md  poetry.toml  pyproject.toml  requirements.txt
artifacts/data/wordle_ai/raw/: words.json
ml/: __init__.py
ml/core/: download.py  download_test.py  extract.py  extract_test.py  repo_paths.py  repo_paths_test.py  simulation.py  test_simulation.py
ml/data/pytorch_name_classification/: pytorch.py  pytorch_test.py  shared.py  shared_test.py
ml/models/name_classification_rnn/: demo.py  model.py  module.py  train.py
ml/simulations/: minelearning_2d_solid.py  minelearning_2d_solid_test.py
monorepo/templates/notebooks/: tutorial.ipynb
notebooks/minelearning_2d_solid/prototype/: baseline.ipynb  simulation.ipynb
notebooks/wordle_ai/prototype/: wordle_ai.ipynb  wordle_ai.py
tutorials/: assembly_ai_linear_regression_from_scratch.ipynb  cython_introduction.ipynb  markov_chains_sherlock_holmes_generator.ipynb  neural_network_from_scatch.ipynb  pytorch_datasets_and_dataloaders.ipynb  pytorch_quickstart.ipynb  rnns_in_pytorch.ipynb  tensorflow_basic_text_classification.ipynb  tensorflow_hyperparameter_tuning.ipynb  tensorflow_quickstart.ipynb  tensorflow_save_and_load.ipynb  tensorflow_text_classification_with_hub.ipynb  torchvision_instance_segmentation_finetuning.ipynb  torchvision_object_detection_finetuning.ipynb
