[tool.poetry]
name = "ml"
version = "0.1.0"
description = "A monorepo for my own learning about ML and for ML projects."
authors = ["Sophie Katz <sophie@sophiekatz.us>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
