# Copyright (c) 2023 Sophie Katz
#
# This file is part of Sophie's ML Monorepo.
#
# Sophie's ML Monorepo is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later version.
#
# Sophie's ML Monorepo is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
# PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with Sophie's
# ML Monorepo. If not, see <https://www.gnu.org/licenses/>.

[tool.poetry]
name = "ml"
version = "0.1.0"
description = "A monorepo for my own learning about ML and for ML projects."
authors = ["Sophie Katz <sophie@sophiekatz.us>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9 <3.10"
tensorflow = ">=2.10 <2.11"
tensorflow-io-gcs-filesystem = ">=0.31,<0.32"
tensorflow-datasets = ">=4.8,<4.9"
tensorflow-hub = "^0.13.0"
keras-tuner = "^1.3.5"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
pylance = "^0.4.4"
pytest = "^7.3.1"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
